Refactored express to use two db connections concurrently and multiple target environments (e.g. staging/production) running devnet, testnet or mainnet.
